hphp/hack/test/typecheck/lambda/lambda_bad_pos.php.like_types.exp
File "lambda_bad_pos.php", line 26, characters 25-35:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
